@@ -38,8 +38,7 @@ function releaseUpgrade(title) {
 </script>
 <div id="notification_container" class='tip'>
 <span id="notification_text"><% $message->{text} %></span>
-<!-- comment close button for upgrade dialog when 4.0 is out -->
-<a id="popx" onclick="Zentyal.Dashboard.closeNotification('<% $message->{name} %>'); return false">×</a>
+<!-- <a id="popx" onclick="Zentyal.Dashboard.closeNotification('<% $message->{name} %>'); return false">×</a> -->
 </div>
 % }
 
