@@ -1,3 +1,5 @@
+HEAD
+	+ Show upgrade button to 4.0 in the dashboard
 3.5.4
 	+ Use upload-crash-report.py tool from OpenChange upstream instead
 	  of a custom one
